DBZ-2766 Remove Guava dependency